# python-optiga-trust

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MAINTAINERS.md  MANIFEST.in  README.md  REUSE.toml  export_chip.json  export_chip.xml  optigatrust.py  pyproject.toml  requirements.txt  setup.py  test_optigatrust.py
.github/workflows/: linting-test.yml
.reuse/: dep5
docs/: .buildinfo  Makefile  README.md  chip.html  conf.py  copyright.html  copyright.rst  core.md  crypto.html  csr.html  genindex.html  index.html  linux_support.html  linux_support.rst  make.bat  metadata.html  objects.inv  port.html  prov_mode.html  prov_mode.rst  py-modindex.html  references.html  search.html  searchindex.js
docs/00_getting_started/: 01_hardware.html  02_prov_mode.html  index.html
docs/01_features/: 11_chip.html  12_metadata.html  13_crypto.html  14_csr.html  15_port.html  20_error_codes.html  index.html
docs/02_building/: building_linux.html  building_windows.html  index.html
docs/_sources/: chip.rst.txt  copyright.rst.txt  crypto.rst.txt  csr.rst.txt  index.rst.txt  linux_support.rst.txt  metadata.rst.txt  port.rst.txt  prov_mode.rst.txt  references.rst.txt
docs/_sources/00_getting_started/: 01_hardware.rst.txt  02_prov_mode.rst.txt  index.rst.txt
docs/_sources/01_features/: 11_chip.rst.txt  12_metadata.rst.txt  13_crypto.rst.txt  14_csr.rst.txt  15_port.rst.txt  20_error_codes.md.txt  index.rst.txt
docs/_sources/02_building/: building_linux.rst.txt  building_windows.rst.txt  index.rst.txt
docs/_static/: ifx.css  optiga_trust_charge_evalkit_uart_python.hex  optiga_trust_m_evalkit_uart_python.hex
docs/doctrees/: chip.doctree  copyright.doctree  crypto.doctree  csr.doctree  environment.pickle  index.doctree  linux_support.doctree  metadata.doctree  port.doctree  prov_mode.doctree
docs/source/: chip.rst  conf.py  crypto.rst  csr.rst  export.rst  get_started.rst  index.rst  metadata.rst  port.rst  prov_mode.rst
docs/source/_ext/: jsonlexer.py
docs/source/_static/: optiga_trust_m_evalkit_uart_python.hex
docs/sources/: crypto.rst.txt  prov_mode.rst.txt
docs/sphinx/: chip.rst  conf.py  crypto.rst  port.rst
docs/static/: optiga_trust_charge_evalkit_uart_python.hex
examples/: chip_info.py  ecc_key_generation.py  ecdsa_signverify.py  ecdsa_signverify_oid.py  ecdsa_signverify_oid_e0e0.py  ecdsa_verify.py  ecdsa_verify_sw.py
extras/optiga-trust-m/: .gitignore  CMakeLists.txt  README.md  download_libusb_windows.bat  linux_i2c.cmake  linux_i2c_gpiod.cmake  linux_libusb.cmake  linux_uart.cmake  optiga-trust-m-libusb.vcxproj  optiga-trust-m-uart.vcxproj  optiga-trust.sln
extras/optiga-trust-m/config/: optiga_lib_config_m_v3_python.h
extras/optiga-trust-m/include/: optiga_trust_init.h
extras/optiga-trust-m/src/: optiga_trust_init.c
lib/: test_optigatrust.py  trust.py
lib/OptigaTrust/: __init__.py  __init__.pyi
lib/OptigaTrust/PublicKey/: ECC.py  ECC.pyi
lib/OptigaTrust/Random/: __init__.py  __init__.pyi
lib/OptigaTrust/Util/: Chip.py  Chip.pyi  Defines.py  Defines.pyi  __init__.py
lib/OptigaTrust/pk/: ecdsa.py
lib/OptigaTrust/rand/: __init__.py
lib/OptigaTrust/util/: io.py
lib/OptigaTrust/x509/: csr.py
lib/optigatrust/: .gitignore  __init__.py  assymetric.py  asymmetric.py  cert.py  chip.py  random.py  version.py
lib/optigatrust/const/: m1.py  m3.py  x.py
lib/optigatrust/csrc/: CMakeLists.txt  OptigaTrust.sln  OptigaTrust.vcxproj  OptigaTrust.vcxproj.filters  linux_i2c.cmake  optiga-trust.sln  optiga_trust_init.c  optiga_trust_init.h  optiga_trust_m1_init.c  optiga_trust_m1_init.h
lib/optigatrust/pk/: __init__.py  ecc.py  ecdsa.py  rsa.py  rsassa.py
lib/optigatrust/rand/: __init__.py
lib/optigatrust/util/: __init__.py  chip.py  io.py  types.py
lib/optigatrust/x509/: __init__.py  cert.py  csr.py
liboptigatrust/: CMakeLists.txt  OptigaTrust.sln  OptigaTrust.vcxproj
optigatrust/: __init__.py  __main__.py  _backend.py  asymmetric.py  cert.py  clidriver.py  core.py  crypto.py  csr.py  export.py  objects.py  port.py  transfer.py  version.py  x509.py
optigatrust/const/: m1.py  m2id2.py  m3.py  x.py
optigatrust/csrc/: CMakeLists.txt  README.md  optiga-trust.sln
optigatrust/csrc/lib/: liboptigatrust-libusb-win-i686.lib  optiga_comms.ini
optigatrust/csrc/optiga-trust-m/: iob_new.cpp  linux_i2c.cmake  linux_libusb.cmake  linux_uart.cmake  optiga-trust-m-tc.vcxproj  optiga-trust-m.vcxproj  optiga_trust_init.c  optiga_trust_init.h
optigatrust/csrc/optiga-trust-m-old/: optiga-trust-m.vcxproj  optiga_trust_init.h
optigatrust/csrc/optiga-trust-x/: Makefile  linux_libusb.cmake
optigatrust/enums/: __init__.py  charge.py  conf_template.xml  m1.py  m2id2.py  m3.py  x.py
src/: OptigaTrust.vcxproj  README.md
src/optigatrust/: DESCRIPTION.md  __init__.py  __main__.py  _backend.py  clidriver.py  crypto.py  csr.py  objects.py  port.py  util.py  version.py
src/optigatrust/enums/: __init__.py  charge.py  conf_template.xml  m1.py  m2id2.py  m3.py  x.py
src/optigatrust/lib/: liboptigatrust-libusb-win-amd64.exp  liboptigatrust-libusb-win-amd64.lib  liboptigatrust-libusb-win-i686.exp  (+5 more)
tests/: .coverage  .test.json  README.md  conftest.py  optigatrust_test.py  pytest.ini  requirements.txt  test_cert.py  test_chip_control.py  test_csr.py  test_ecc.py  test_ecdh.py  test_ecdsa.py  test_examples.py  test_hmac.py  test_kdf.py  test_meta.py  test_metadata.py  test_pbkdf2.py  test_port.py  test_rand.py  test_rsa.py  test_rsapkcs1v15.py  test_rsassa.py
tests/.export/: OPTIGA_Trust.xml
tests/TrustX/: test_cert.py  test_ecc.py
tests/cli/: test_create_keys.py  test_object.py
tests/fixtures/: openssl_config  optiga_trust_m_v3_test_configuration.json  test-ec-ecdsa-cert.pem  test-ec-ecdsa-faulty-cert.pem  test-rsa1024-corrupted-example-cert.crt  test-rsa1024-example-cert.crt  test-rsa1024-example-cert.key  test-rsa1024-example-cert.pem  test-rsa2048-corrupted-example-cert.crt  test-rsa2048-example-cert.crt  test-rsa2048-example-cert.key  test-rsa2048-example-cert.pem
(+54 files in other folders)
